Addition of ajax information to allow for deletion of routes.

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -79,8 +79,14 @@
                 <option value="26">Pacific Central Station</option>
             </select>
         </div>
-        <button type="submit" onclick="loadRoute()" class="btn btn-primary" form="landmarks">Let's go!</button>
+        <button type="submit"  class="btn btn-primary" form="landmarks">Let's go!</button>
+        <!-- onclick="loadRoute()" -->
         <!-- load route will be bring maybe another box with the routes? overall it needs to show the shortest routes between the 2 landmarks. Go to the W3 AJAX -->
     </form>
+    <div id="demo">
+        <h2> let ys check</h2>
+        <button type="button" onclick="loadDoc()"> CHange the content</button>
+    </div>
+<script src="/static/javascript/index.js"></script>
 </body>
 </html>
