--- a/flask_app/templates/route.html
+++ b/flask_app/templates/route.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     {{shortest_route}}
+
+    <p> You need to go through, {{shortest_route[0]}} and  {{shortest_route[1]}}</p>
     <p> checking</p>
 </body>
 </html>
