This commit includes various new additions of code to work on the AJAX portion of the project. The goal is to use javascript to allow for the results asked for by the client to appear without the need to refresh the page or be sent to a different route. In my javascript file, I created two AJAX functions: one that got information from a text file and one from a POST request. Then went to my controller to add the beginning of the flask portion to allow for this feature to work.

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -84,8 +84,16 @@
         <!-- load route will be bring maybe another box with the routes? overall it needs to show the shortest routes between the 2 landmarks. Go to the W3 AJAX -->
     </form>
     <div id="demo">
-        <h2> let ys check</h2>
-        <button type="button" onclick="loadDoc()"> CHange the content</button>
+        <h2> let us check</h2>
+        <button type="button" onclick="loadDoc()"> Change the content</button>
+        <br></br>
+        <div id="text"> </div>
+    </div>
+    <div id="ajax_post">
+        <h2> Ajax to show the results of form</h2>
+        <button type="button2" onclick="loadResults()"> Show me the route!</button>
+        <br></br>
+        <div id="result"> </div>
     </div>
 <script src="/static/javascript/index.js"></script>
 </body>
